# readflow

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  read_flow.md
.claude/: settings.local.json
app/: __init__.py  __main__.py  config.py  db.py  epub_text.py  ingest.py  jobs.py  main.py  metadata.py  typography.py  watcher.py
app/routes/: knowledge.py  library.py  reader.py  settings.py
app/static/: reader.js  reading-session.js
app/static/css/: book.css  index.css  reader.css
docs/: getting-started.md
docs/specs/: 2026-07-14-ai-reading-enhancement-design.md
docs/superpowers/plans/: 2026-07-23-reliable-reading-log.md
docs/superpowers/specs/: 2026-07-23-reliable-reading-log-design.md
docs/testing/: file-deletion-sync.tdd.md  reliable-reading-log.tdd.md  v0.4-ai-brains.tdd.md  v0.4-back-button.tdd.md  v0.6-reader-bugfix.tdd.md
patches/: foliate-paginator.patch
tests/: conftest.py  e2e_prod_real.py  test_api.py  test_backend.py  test_config.py  test_db.py  test_foliate_patch.py  test_ingest.py  test_jobs.py  test_knowledge_cards.py  test_metadata.py  test_reader_e2e.py  test_reader_typography.py  test_reading_log.py  test_typography.py  test_watcher.py
tests/js/: reading-session.test.mjs
