[project]
name = "readflow"
version = "0.3.0"
description = "书舟 - 基于 NAS 的私人阅读服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "ebooklib>=0.18",
    "watchdog>=4.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pillow>=10.0",        # 封面缩略图处理
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",         # 测试客户端
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
